2015-08-17  Praveen Kumar Kaushik
            Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8716: Enable setjmp/longjmp functions for AVR_TINY architecture
	* include/setjmp.h (_JBLEN): Update for AVR_TINY arch conditionally.
	* libc/stdlib/setjmp.S: Enable setjmp and longjmp for AVR_TINY
	(setjmp, longjmp): Update call-saved registers for AVR_TINY

2015-08-06  Morten Engelhardt Olsen <Morten_engelhardt.Olsen@atmel.com>

	Fix typos and incorrect defines in header files.
	* include/avr/io90pwm216.h: corrted typo in comment.
	* include/avr/iousbxx6_7.h: Add ADHSM bit definition to ADCSRB.
	* include/avr/iom165a.h: Remove BODSE and BODS.
	* include/avr/io2323.h: Move sleep mode definitions to correct place.
	* include/avr/io90pwm316.h: corrected typo in comment.
	(PIM1): Add pin definitions.
	* include/avr/iom16a.h: Add SPI_STC_vect. Keep old name for backward
	compatibility.
	* include/avr/iom324.h: Remove duplicate sleep mode definitions.
	* include/avr/iotn861a.h (PWM1X): Define.

2015-08-06  Morten Engelhardt Olsen <Morten_engelhardt.Olsen@atmel.com>

	* include/avr/iox32a4.h: Renamed member LOCKBITS to LOCK_BITS.
	(ADC_CH_MUXPOS_enum): Add missed pinmux positions.
	* include/avr/iox32d4.h: Likewise.
	* include/avr/iox16a4.h: Likewise.
	* include/avr/iox16d4.h: Likewise.
	(ADC_CH_MUXNEG_enum): correct pinmux values.
	* include/avr/iox128a1.h: Renamed member LOCKBITS to LOCK_BITS.
	* include/avr/iox128a3.h: Likewise.
	* include/avr/iox128d3.h: Likewise.
	* include/avr/iox192a3.h: Likewise.
	* include/avr/iox192d3.h: Likewise.
	* include/avr/iox256a3.h: Likewise.
	* include/avr/iox256a3b.h: Likewise.
	* include/avr/iox256d3.h: Likewise.
	* include/avr/iox64a1.h: Likewise.
	* include/avr/iox64a3.h: Likewise.
	* include/avr/iox64d3.h: Likewise.

2015-07-29  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

    * include/avr/wdt.h: Fix typo in documentation.

2015-07-22  Pitchumani Sivanupandi <pitchumani.s@atmel.com>
