@@ -36,6 +36,8 @@
   [#8590] WDT enable/disable for devices with CCP
   [#8610] Remove eeprom function name mangling
   [#8716] Enable setjmp/longjmp functions for AVR_TINY architecture
+  [#8718] Enable EEPROM memory map only for devices with EEPROM Data Memory
+          Mapping Enable bit (EEMAPEN)
 
 * Other changes:
 
